variables.RunFour.scala.error
Compilation error:
RunFour:2: error: reassignment to val
var amount=Int = 0
               ^